[gd_scene load_steps=4 format=3 uid="uid://b3o134voblokb"]

[ext_resource type="Script" uid="uid://bhdwcfpuo5wiv" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://c6bmkcdwmlck8" path="res://parallax_background.tscn" id="2_0xm2m"]

[sub_resource type="GDScript" id="GDScript_0xm2m"]
script/source = "extends Label

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	text = \"Score: \" + str(Globals.cherries)
"

[node name="main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="Normal" type="Button" parent="."]
offset_left = 205.0
offset_top = 488.0
offset_right = 402.0
offset_bottom = 577.0
theme_override_font_sizes/font_size = 50
text = "Tutorial"

[node name="Hard" type="Button" parent="."]
offset_left = 710.0
offset_top = 487.0
offset_right = 904.0
offset_bottom = 576.0
theme_override_font_sizes/font_size = 50
text = "Level"

[node name="Exit" type="Button" parent="."]
offset_left = 28.0
offset_top = 23.0
offset_right = 112.0
offset_bottom = 85.0
text = "Exit"

[node name="BG" parent="." instance=ExtResource("2_0xm2m")]

[node name="Label" type="Label" parent="."]
offset_left = 479.0
offset_top = 72.0
offset_right = 519.0
offset_bottom = 95.0
script = SubResource("GDScript_0xm2m")

[connection signal="pressed" from="Normal" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
